--- a/drip-protocol/frontend/index.html
+++ b/drip-protocol/frontend/index.html
@@ -3,20 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>DRIP Protocol - Bitcoin that Flows</title>
+    <meta name="description" content="Real-time sBTC & STX streaming payments on Stacks. Stream value continuously over time with trustless escrow, linear vesting, and instant withdrawals." />
+    <meta name="author" content="DRIP Protocol" />
+    <meta name="keywords" content="Bitcoin, sBTC, STX, Stacks, streaming payments, DeFi, cryptocurrency, vesting, payment streaming" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="DRIP Protocol - Bitcoin that Flows" />
+    <meta property="og:description" content="Real-time sBTC & STX streaming payments on Stacks blockchain" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://drip-protocol.com" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="DRIP Protocol - Bitcoin that Flows" />
+    <meta name="twitter:description" content="Real-time sBTC & STX streaming payments on Stacks blockchain" />
   </head>
 
   <body>
